Few CSS tweaks to feature.container.item

--- a/css/style.css
+++ b/css/style.css
@@ -920,6 +920,8 @@ figcaption {
   width: 33.33333333%;
   padding-right: 10px;
   padding-left: 10px;
+  display: -webkit-box;
+  display: contents;
 }
 
 .collection-item.cc-feature-row {
